2005-12-05   Ping Cheng <pingc@wacom.com>
	* Updated README and NEWS
	* Modified configure.in

2005-12-02   Ping Cheng <pingc@wacom.com>
	* Send EVIOCGRAB ioctl to kernel in wcmUSB.c (Christian Lupien)
	* Removed mousedev.c and usbmouse.c in src/2.6.x 
	  since wacom takes whole control of the tablet now
	* Updated configure scripts and src/2.6.x/Makefile.in 
	  to remove mousedev and usbmouse from building string

2005-11-22   Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.1-1 released
	* Fixed a dual monitor display issue

2005-11-18   Ping Cheng <pingc@wacom.com>
	*  Fixed a wacomcpl and an X driver bug

2005-11-17   Ping Cheng <pingc@wacom.com>
	* Updated wacomcpl
	* Updated wacom.c and xsetwacom

2005-11-14   Ping Cheng <pingc@wacom.com>
	* Updated xidump
	* Support 2.6.14
	* Updated acinclude.m4 (Radomir Dopieralski)
	* Check tool serial number configured in xorg.conf/XF86Config 
	* Report tool id and serial number in 4th-6th valuators

2005-11-02   Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.1 Released as beta

2005-10-26   Ping Cheng <pingc@wacom.com>
	* Updated wacdump and xidump
	* Support 2.6.x without EV_SYN defined

2005-10-20   Ping Cheng <pingc@wacom.com>
	* Updated configure options (added --with-x-src)
	* Added Device ID info for USB and P4 tablets 
	* Support 2.6.13

2005-10-11    Ping Cheng <pingc@wacom.com>
	* Added DTU710, DTF 720 and Graphire 4

2005-09-21    Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.0 Released

2005-09-19    Ping Cheng <pingc@wacom.com>
	* Fixed a serial Graphire bug

2005-09-16    Ping Cheng <pingc@wacom.com>
	* Fixed a P4 eraser bug
	* Fixed an initial relative pressure bug (Fred)
	* Reports USB tool ID

2005-09-09    Ping Cheng <pingc@wacom.com>
	* Supports 16 button events for all tools
	* Merged TabletPC button1 patch from Brent Baccala

2005-09-07    Ping Cheng <pingc@wacom.com>
	* Updated wacdump for Cintiq 21UX
	* Updated docs.html
	* Updated acinclude.m4 to deal with version checking, 