@@ -230,14 +230,19 @@ AC_ARG_ENABLE(evdev,
 AC_HELP_STRING([--enable-evdev], [Enable building evdev.o [[default=no]]]),
 	, enable_evdev=no)
 if test "$enable_evdev" != "no"; then
+	kver=`echo $WCM_KERNEL_VER | grep -c "2.4"`
 	if test "$WCM_ENV_KERNEL" != "yes"; then
 		echo "***"; echo "*** WARNING:";
 		echo "*** Unable to compile evdev.o without kernel build environment"
 		echo "*** evdev.o will not be built"
 		echo "***"
-	else
+	elif test $kver != 0 ; then
 		WCM_OPTION_EVDEV=yes
 		WCM_MODULES="$WCM_MODULES evdev.o"
+	else
+		echo "***"; echo "*** WARNING:";
+		echo "*** No need to build evdev.o for kernel 2.6"
+		echo "***"
 	fi
 fi
 
@@ -305,11 +310,16 @@ fi
 
 dnl Check for dlloader
 WCM_OPTION_DLLOADER=no
-AC_ARG_ENABLE(dlloader,
-AC_HELP_STRING([--enable-dlloader], [Use dlloader  [[default=no]]]),
-	, enable_dlloader=no)
-if test "$enable_dlloader" != "no"; then
+if test -f $WCM_XLIBDIR/modules/input/wacom_drv.so; then
 	WCM_OPTION_DLLOADER=yes
+fi
+AC_ARG_ENABLE(dlloader,
+AC_HELP_STRING([--enable-dlloader], [Use dlloader  [[default=usually]]]),
+	, enable_dlloader=$WCM_OPTION_DLLOADER)
+if test "$enable_dlloader" = "yes"; then
+	WCM_OPTION_DLLOADER=yes
+elif test "$enable_dlloader" = "no"; then
+	WCM_OPTION_DLLOADER=no
 fi
 
 AM_CONDITIONAL(WCM_DLLOADER, test "$WCM_OPTION_DLLOADER" == "yes")
@@ -322,7 +332,7 @@ AC_HELP_STRING([--enable-wacomdrv], [Enable building wacom_drv.{o,so} [[default=
 if test "$enable_wacomdrv" != "no"; then
 	if test "$WCM_ENV_XF86" != "yes" && test "$WCM_ENV_XORGSDK" != "yes"; then
 		echo "***"; echo "*** WARNING:";
-		echo "*** Unable to compile wacom_drv.o without XF86 build environment"
+		echo "*** Unable to compile wacom_drv.{o,so} without XF86 build environment"
 		echo "*** or Xorg SDK."
 		echo "*** wacom_drv.o will not be built"
 		echo "***"
@@ -346,17 +356,26 @@ AC_HELP_STRING([--with-arch], [Use specified architecture]),
 ])
 
 dnl Check for X server bit
-WCM_OPTION_XSERVER64=no
 AC_ARG_ENABLE(xserver64,
-AC_HELP_STRING([--enable-xserver64], [Use specified X server bit [[default=no]]]),
-	, enable_xserver64=no)
-if test "$enable_xserver64" != "no"; then
-	CFLAGS="$CFLAGS -D__amd64__"
-	WCM_XSERVER64="-D_XSERVER64"
-	WCM_OPTION_XSERVER64=yes
+AC_HELP_STRING([--enable-xserver64], [Use specified X server bit [[default=usually]]]),
+	, enable_xserver64=$WCM_OPTION_XSERVER64)
+if test "$enable_xserver64" = "no"; then
+		WCM_OPTION_XSERVER64=no
+	elif test "$enable_xserver64" = "yes"; then
+		CFLAGS="$CFLAGS -D__amd64__"
+		WCM_XSERVER64="-D_XSERVER64"
+		WCM_OPTION_XSERVER64=yes
 	if test "$WCM_ARCH" = "x86_64"; then
-		WCM_ARCH=x86-64
 		WCM_KSTACK="-mpreferred-stack-boundary=4 -mcmodel=kernel"
+	fi
+else
+	dnl not explicitly set, go with default
+	if test "$WCM_OPTION_XSERVER64" = "yes"; then
+		CFLAGS="$CFLAGS -D__amd64__"
+		WCM_XSERVER64="-D_XSERVER64"
+		if test "$WCM_ARCH" = "x86_64"; then
+			WCM_KSTACK="-mpreferred-stack-boundary=4 -mcmodel=kernel"
+		fi
 	fi
 fi
 
@@ -499,7 +518,7 @@ AC_SUBST(WCM_XORGSDK)
 AC_SUBST(WCM_XF86DIR)
 AC_SUBST(WCM_XLIBDIR)
 AC_SUBST(WCM_XSERVER64)
-AC_SUBST(WCM_OPTION_DLLOADER)
+#AC_SUBST(WCM_OPTION_DLLOADER)
 AC_SUBST(WCM_NO_MERGE_CONSTANTS)
 AC_SUBST(WCM_LINUX_INPUT)
 AC_SUBST(WCM_XIDUMP_LIBS)
@@ -540,7 +559,7 @@ echo "----------------------------------------"
 echo "  BUILD ENVIRONMENT:"
 echo "       architecture - $WCM_ARCH"
 echo "       linux kernel - $WCM_ISLINUX $WCM_KERNEL_VER"
-echo "  module versioning - $WCM_OPTION_MODVER" $WCM_MODVER
+echo "  module versioning - $WCM_OPTION_MODVER $WCM_MODVER"
 echo "      kernel source - $WCM_ENV_KERNEL $WCM_KERNELDIR"
 if test "$WCM_ENV_XF86" == "yes"; then
 echo "            XFree86 - $WCM_ENV_XF86 $WCM_XF86DIR"
